# efiXplorer

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  README_efiXloader.md  build.py  ida-plugin.json
.github/workflows/: analyse.yml  build.yml  ci-build.yml  ci-loader-build.yml  ci-windows.yml  codeql-analysis.yml
cmake/: FindIdaSdk.cmake
efiXloader/: .clang-format  CMakeLists.txt  efiLoader.cpp  efiLoader.h  efi_loader.cc  efi_loader.cpp  efi_loader.h  exports.def  ida_core.h  pe.cc  pe.cpp  pe.h  pe_ida.h  pe_manager.cc  pe_manager.cpp  pe_manager.h  uefitool.cc  uefitool.cpp  uefitool.h  utils.cc  utils.cpp  utils.h
efiXloader/3rd/uefitool/UEFITool/: hexviewdialog.h
efiXloader/3rd/uefitool/common/: guiddatabase.h
efiXloader/3rd/uefitool/common/bstrlib/: bstrlib.c
efiXplorer/: .clang-format  CMakeLists.txt  efiAnalysis.cpp  efiAnalysis.h  efiAnalyzer.h  efiAnalyzerArm.cpp  efiAnalyzerX86.cpp  efiDeps.cpp  efiDeps.h  efiGlobal.cpp  efiGlobal.h  efiHexRays.cpp  efiHexRays.h  efiPluginArgs.h  efiSmmUtils.cpp  efiSmmUtils.h  efiUi.cpp  efiUi.h  efiUtils.cpp  efiUtils.h  efiXplorer.cpp  efiXplorer.h  efi_analyser.h  efi_analyser_arm.cc  efi_analyser_x86.cc  efi_analysis.h  efi_analysis_arm.cc  efi_analysis_x86.cc  efi_defs.cc  efi_defs.h  efi_deps.cc  efi_deps.h  efi_global.cc  efi_global.h  efi_hexrays.cc  efi_hexrays.h  efi_smm_utils.cc  efi_smm_utils.h  efi_ui.cc  efi_ui.h  (+3 more)
efiXplorer/3rd/libfort/: fort.cpp  fort.h
efiXplorer/3rd/nlohmann_json/: json.hpp
efiXplorer/tables/: efi_pei_tables.h  efi_services.h  efi_system_tables.h
flirt/: README.md  efixplorer.sig  get_sig.py  ida2pat.py  requirements.txt
flirt-gen/: ida2pat.py
fw-analyzer/: README.md  efixplorer_start.idc  fw_analyzer.py  requirements.txt
fw-analyzer/tools/: gb_prepare.py  get_efi_images.py  guid_db.py  utils.py
guids/: guids.json
loader/: CMakeLists.txt  efi_loader.cc  efi_loader.h  pe_ida.h  uefitool.cc  uefitool.h
plugin/: CMakeLists.txt  efi_analysis_arm.cc  efi_analysis_x86.cc  efi_defs.cc  efi_deps.h  efi_global.cc  efi_global.h  efi_smm_utils.cc  efi_smm_utils.h  efi_utils.h
src/: .clang-format  CMakeLists.txt  CMakeSettings.json  efiAnalysis.cpp  efiAnalysis.h  efiEmulatorDxe.cpp  efiEmulatorDxe.h  efiEmulatorOptionRom.cpp  efiEmulatorOptionRom.h  efiHexRays.cpp  efiPluginArgs.h  efiProtocolGraph.cpp  efiProtocolGraph.h  efiSmiHelper.cpp  efiSmiHelper.h  efiSmmUtils.cpp  efiSmmUtils.h  efiUi.cpp  efiUi.h  efiUtils.cpp  efiUtils.h  efiXplorer.cpp  efiXplorer.h  efiXplorerHexRays.cpp  efiXplorerHexRays.h  efiXplorerIDA.cpp  efiXplorerIDA.h
src/guids/: guids.json
src/tables/: efi_pei_tables.h  efi_services.h  efi_system_tables.h
